--- a/src/components/tasks-filter/tasks-filter.css
+++ b/src/components/tasks-filter/tasks-filter.css
@@ -1,20 +1,14 @@
-.task-add-form {
+.btn-group {
+  margin-top: 0px;
+}
+
+.filter-panel {
   margin-top: 30px;
   padding: 25px;
   background-color: #3d5a80;
   border-radius: 4px;
   box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.15);
   color: #fff;
-}
-
-.add-form {
-  margin-top: 0px;
-}
-
-.add-form input {
-  font-size: 1.5rem;
-}
-
-.add-form input::placeholder {
-  color: #ccc;
+  display: flex;
+  justify-content: space-between;
 }
