--- a/src/components/tasks-list-item/tasks-list-item.css
+++ b/src/components/tasks-list-item/tasks-list-item.css
@@ -3,63 +3,56 @@
   border-bottom: 1px solid #3d5a80;
 }
 
-.list-group-item:last-child {
-  border-bottom: none;
+.list-group-item:hover .remove {
+  display: block;
 }
 
-.list-group-item span {
-  line-height: 35px;
-  font-size: 20px;
-  cursor: pointer;
-  min-width: 550px;
+.list-group-item:last-child {
+  border-bottom: none;
 }
 
 .list-group-item input {
   line-height: 35px;
   font-size: 20px;
-  text-align: center;
+  text-align: left;
   border: 0;
 }
 
-.list-group-item button {
-  width: 35px;
-  height: 35px;
-  margin: 3px;
-  font-size: 17px;
-  border: none;
+.completed {
+  color: #ccc;
+  text-decoration: line-through;
+}
+
+.circle {
+  align-items: center;
+  border: 2px solid #3d5a80;
+  border-radius: 50%;
   cursor: pointer;
-}
-
-.list-group-item .btn-cookie {
-  color: #e09f3e;
-}
-
-.list-group-item .btn-trash {
-  color: #e5383b;
-}
-
-.list-group-item .fa-star {
-  width: 35px;
+  display: flex;
   height: 35px;
-  text-align: center;
-  line-height: 35px;
-  font-size: 16px;
-  color: #ffd700;
-  transition: 0.3s all;
-  transform: translateX(30px);
-  opacity: 0;
+  justify-content: center;
+  width: 35px;
+  margin-right: 20px;
 }
 
-.list-group-item.like .fa-star {
-  opacity: 1;
-  transform: translateX(0px);
+.circle:hover {
+  background: #e1e5ff;
 }
 
-.list-group-item.increase .list-group-item-label,
-.list-group-item.increase .list-group-item-input {
-  color: #e09f3e;
+.checked {
+  background: #3d5a80;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
 }
 
-.list-group-item.increase .btn-star {
-  color: #aeaeae;
+.remove {
+  cursor: pointer;
+  display: none;
+  transition: all 500ms ease-in-out;
+  font-size: 1.5rem;
+  color: red;
+}
+.wrapper {
+  display: flex;
 }
